# sc-holotable

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  status.md
.cargo/: config.toml
crates/sc-contracts/: Cargo.toml
crates/sc-contracts/examples/: ambush_dig.rs  bp_title_conflicts.rs  contract_census.rs  contract_dump.rs  damage_dig.rs  encounter_analytics.rs  encounter_kinds.rs  expand_sample.rs  merge_sample.rs  pool_smoke.rs  role_investigation.rs  salvage_pool.rs  salvage_source.rs  ship_pool_audit.rs  spawn_dig.rs  tier_investigation.rs
crates/sc-contracts/src/: blueprints.rs  classify.rs  clusters.rs  currency.rs  expand.rs  index.rs  lib.rs  locality.rs  merge.rs  pools.rs  ships.rs  titles.rs
crates/sc-contracts/src/tui/: clusters.rs  mod.rs
crates/sc-extract/: Cargo.toml
crates/sc-extract-generated/: Cargo.toml
crates/sc-extract-generated/src/: builder.rs  extract.rs  handle.rs  lib.rs  locale_key.rs
crates/sc-extract/examples/: dump_ammo_chain.rs  dump_beam.rs  dump_boomtube.rs  dump_boomtube2.rs  dump_charged.rs  dump_damage_types.rs  dump_fire_rapid.rs  dump_fire_single.rs  dump_healing.rs  dump_p4ar.rs  dump_power_deep.rs  dump_power_detail.rs  dump_power_draw.rs  dump_power_states.rs  dump_raw_components.rs  dump_sequence.rs  dump_weapon_components.rs  explore_weapons.rs  parse_real_p4k.rs
crates/sc-extract/src/: asset_data.rs  assets.rs  config.rs  datacore.rs  display_names.rs  error.rs  extracted.rs  filters.rs  graph.rs  lib.rs  locale.rs  localized_items.rs  manufacturers.rs  snapshot.rs  tags.rs
crates/sc-extract/tests/: snapshot_live_roundtrip.rs
crates/sc-installs/: Cargo.toml
crates/sc-installs/src/: channel.rs  discovery.rs  error.rs  installation.rs  language.rs  launcher_store.rs  lib.rs  log_parser.rs  manifest.rs
crates/sc-weapons/: Cargo.toml
crates/sc-weapons/examples/: dump_connection_heat.rs  weapon_stats.rs
crates/sc-weapons/src/: classify.rs  damage.rs  error.rs  fire_action.rs  fps.rs  lib.rs  missile.rs  pools.rs  ship.rs  sustain.rs  tui.rs
docs/: benchmarks.md  codegen.md  datacore.md  feature-gating-v2.md  feature-gating.md  feature-request-sc-contracts-langpatch.md  feature-request-sc-weapons-langpatch.md  launcher-store.md  localization.md  sc-ammo.md  sc-contracts-guide.md  sc-contracts-v2.md  sc-contracts.md  sc-extract.md  sc-installs.md  sc-weapons.md
implementing/: feature-gating-v2.md  sc-extract-2a.md  sc-extract-2c.md  sc-generator.md  sc-installs.md
tools/: regenerate.ps1  release.ps1
tools/bench/: README.md  bench.ps1
tools/sc-bench/: Cargo.toml
tools/sc-bench/src/: main.rs  output.rs  runner.rs
tools/sc-explorer/: Cargo.toml
tools/sc-explorer/src/: main.rs
tools/sc-generator/: Cargo.toml
tools/sc-generator/src/: closure.rs  emit.rs  features.rs  main.rs  naming.rs  pipeline.rs
tools/sc-snapshot/: Cargo.toml
tools/sc-snapshot/src/: main.rs
