[workspace]
resolver = "3"
members = [
    "crates/sc-installs",
    "crates/sc-extract",
    "crates/sc-extract-generated",
    "crates/sc-weapons",
    "crates/sc-contracts",
    "tools/sc-generator",
    "tools/sc-bench",
]

[workspace.package]
version = "0.0.0"
edition = "2024"
rust-version = "1.94.1"

[workspace.dependencies]
# Internal crates — referenced by path so one workspace member can depend on another.
sc-installs = { path = "crates/sc-installs" }
sc-extract = { path = "crates/sc-extract" }
sc-extract-generated = { path = "crates/sc-extract-generated" }
sc-weapons = { path = "crates/sc-weapons" }
sc-contracts = { path = "crates/sc-contracts" }

# Workspace-wide logging. Every crate that emits logs uses `tracing`.
# See the "Conventions" section of the README for the rationale.
tracing = "0.1"

# Shared error handling and (de)serialization. Used by most crates.
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"

# svarog — Star Citizen data access. Pinned to a specific commit for
# reproducible builds. Every workspace crate uses `{ workspace = true }`.
svarog-common = { git = "https://github.com/19h/Svarog.git", rev = "ce06ec67", features = ["serde"] }
svarog-datacore = { git = "https://github.com/19h/Svarog.git", rev = "ce06ec67" }
svarog-p4k = { git = "https://github.com/19h/Svarog.git", rev = "ce06ec67" }

# Local svarog override. Points at a clean clone pinned to the same
# commit as above, with a local patch on top of DataCoreReference::is_null
# to treat `instance_index == -1` as a null sentinel. Without this,
# svarog parses thousands of explicit-null scalar Reference fields as
# `Some(garbage_guid)` — see the investigation in the `--dump-refs`
# diagnostic inside `tools/sc-generator/src/pipeline.rs`. Remove this
# override once the fix is upstreamed and the pinned rev is bumped.
[patch."https://github.com/19h/Svarog.git"]
svarog-common = { path = "E:/repros/Svarog/crates/svarog-common" }
svarog-datacore = { path = "E:/repros/Svarog/crates/svarog-datacore" }
svarog-p4k = { path = "E:/repros/Svarog/crates/svarog-p4k" }

# ── Profiles ────────────────────────────────────────────────────────────────
#
# Baseline release profile. Sweep profiles below inherit from this and
# override one dimension at a time. Run sweeps with:
#
#   .\tools\bench\bench.ps1 -Mode all -Profiles release,bench-lto-thin,bench-lto-local \
#       -Features entities-scitem-ships -KillRa
#
# After the sweep, update [profile.release] to the winning combination
# and delete the bench-* profiles.

[profile.release]
lto = "fat"
# codegen-units = 16 is the cargo release default — left implicit.

[profile.release.package.sc-extract-generated]
opt-level = 1

# ── LTO sweep ──────────────────────────────────────────────────────────────
# Baseline is fat (in [profile.release] above).

[profile.bench-lto-thin]
inherits = "release"
lto = "thin"

[profile.bench-lto-local]
inherits = "release"
lto = false                    # local-thin per CGU, no cross-crate LTO

# ── Codegen-units sweep ────────────────────────────────────────────────────
# Baseline is 16 (release default). More CGUs = more parallelism but
# less inlining; fewer = better optimized but serial.

[profile.bench-cgu-1]
inherits = "release"
codegen-units = 1

[profile.bench-cgu-8]
inherits = "release"
codegen-units = 8

[profile.bench-cgu-128]
inherits = "release"
codegen-units = 128

[profile.bench-cgu-256]
inherits = "release"
codegen-units = 256

# ── Opt-level sweep (sc-extract-generated only) ───────────────────────────
# Baseline is opt=1 (in release). Global opt=3 stays fixed — hand-written
# code (graph BFS, tag tree, locale parse) regresses badly at opt<3.

[profile.bench-opt-0]
inherits = "release"
[profile.bench-opt-0.package.sc-extract-generated]
opt-level = 0

[profile.bench-opt-3]
inherits = "release"
[profile.bench-opt-3.package.sc-extract-generated]
opt-level = 3

# ── Strip sweep ────────────────────────────────────────────────────────────
# Baseline is no strip. Stripping debuginfo or symbols speeds up the
# link phase and shrinks the binary but loses backtrace info.

[profile.bench-strip-debug]
inherits = "release"
strip = "debuginfo"

[profile.bench-strip-symbols]
inherits = "release"
strip = "symbols"

# ── Panic sweep ────────────────────────────────────────────────────────────
# Baseline is unwind. Abort removes unwinding tables and enables more
# aggressive optimization but loses panic backtraces.

[profile.bench-panic-abort]
inherits = "release"
panic = "abort"
