[workspace]
resolver = "3"
members = [
    "crates/sc-installs",
    "crates/sc-extract",
    "crates/sc-extract-generated",
    "crates/sc-weapons",
    "crates/sc-contracts",
    "tools/sc-generator",
    "tools/sc-bench",
]

[workspace.package]
version = "0.0.0"
edition = "2024"
rust-version = "1.94.1"

[workspace.dependencies]
# Internal crates — referenced by path so one workspace member can depend on another.
sc-installs = { path = "crates/sc-installs" }
sc-extract = { path = "crates/sc-extract" }
sc-extract-generated = { path = "crates/sc-extract-generated" }
sc-weapons = { path = "crates/sc-weapons" }
sc-contracts = { path = "crates/sc-contracts" }

# Workspace-wide logging. Every crate that emits logs uses `tracing`.
# See the "Conventions" section of the README for the rationale.
tracing = "0.1"

# Shared error handling and (de)serialization. Used by most crates.
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"

# svarog — Star Citizen data access. Pinned to a specific commit for
# reproducible builds. Every workspace crate uses `{ workspace = true }`.
svarog-common = { git = "https://github.com/19h/Svarog.git", rev = "ce06ec67", features = ["serde"] }
svarog-datacore = { git = "https://github.com/19h/Svarog.git", rev = "ce06ec67" }
svarog-p4k = { git = "https://github.com/19h/Svarog.git", rev = "ce06ec67" }

# Local svarog override. Points at a clean clone pinned to the same
# commit as above, with a local patch on top of DataCoreReference::is_null
# to treat `instance_index == -1` as a null sentinel. Without this,
# svarog parses thousands of explicit-null scalar Reference fields as
# `Some(garbage_guid)` — see the investigation in the `--dump-refs`
# diagnostic inside `tools/sc-generator/src/pipeline.rs`. Remove this
# override once the fix is upstreamed and the pinned rev is bumped.
[patch."https://github.com/19h/Svarog.git"]
svarog-common = { path = "E:/repros/Svarog/crates/svarog-common" }
svarog-datacore = { path = "E:/repros/Svarog/crates/svarog-datacore" }
svarog-p4k = { path = "E:/repros/Svarog/crates/svarog-p4k" }

# ── Profiles ────────────────────────────────────────────────────────────────
#
# Tuned via per-dimension sweeps on 2026-04-16 using tools/bench/bench.ps1.
# See docs/benchmarks.md for the full sweep data.
#
# release       Good compile/runtime compromise. Thin LTO saves ~40%
#               compile time vs fat for only ~6% runtime regression.
#               Keeps panic=unwind for backtraces.
#
# release-max   Runtime-optimized. Fat LTO + panic=abort squeezes out
#               the last few percent of runtime at 2x compile cost and
#               no backtraces. Use for final shipped binaries or CI
#               snapshot builds where parse speed matters.

[profile.release]
lto = "thin"

[profile.release.package.sc-extract-generated]
opt-level = 1

[profile.release-max]
inherits = "release"
lto = "fat"
panic = "abort"
