[package]
name = "sc-contracts"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
# Every sc-extract feature this crate's code actually reaches. Update
# whenever a new walk lands. The aggregation crate owns its feature
# closure so narrow consumers can depend on `sc-contracts` alone and
# get fully-populated pools without manually enabling features.
#
#   contracts            ContractGenerator / ContractGeneratorHandler*
#   servicebeacon        StarMapObject (LocationRegistry)
#   entityclassdefinition  EntityClassDefinition (ShipRegistry,
#                          RewardCurrencyCatalog, BlueprintPoolRegistry
#                          item resolution). Without this, ECD records
#                          are not decoded at parse time and the
#                          registries silently come back empty — the
#                          "data just wasn't there" failure mode.
sc-extract = { workspace = true, features = ["contracts", "servicebeacon", "entityclassdefinition"] }
svarog-common = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
sc-installs = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
